Gabel Zentrum CassiT: autolock trapdoor

--- a/mod/area/gabel_zentrum.git.yml
+++ b/mod/area/gabel_zentrum.git.yml
@@ -35681,6 +35681,11 @@ Placeable List:
         Name: {type: :cexostr, value: ziel}
         Type: {type: :dword, value: 3}
         Value: {type: :cexostr, value: WP_gabel_cass1_2_gabel_casst}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Name: {type: :cexostr, value: autolock}
+        Type: {type: :dword, value: 1}
+        Value: {type: :int, value: 1}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 78.336}
     Y: {type: :float, value: 87.1731}
