Gabel Zentrum: flag as always explored

--- a/mod/area/gabel_zentrum.git.yml
+++ b/mod/area/gabel_zentrum.git.yml
@@ -37182,6 +37182,14 @@ TriggerList:
     YPosition: {type: :float, value: 98.0652}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+VarTable: 
+  type: :list
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 0
+    Name: {type: :cexostr, value: always_explored}
+    Type: {type: :dword, value: 1}
+    Value: {type: :int, value: 1}
 WaypointList: 
   type: :list
   value: 
