Zentrum: fix Lampenladen map note

--- a/mod/area/gabel_zentrum.git.yml
+++ b/mod/area/gabel_zentrum.git.yml
@@ -38251,11 +38251,11 @@ WaypointList:
     LocalizedName: 
       type: :cexolocstr
       value: 
-        0: Callistos charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
+        0: Cassandras charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
     MapNote: 
       type: :cexolocstr
       value: 
-        0: Callistos charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
+        0: Cassandras charismatisch-charmante wunderlich-leuchtende magische Lampenwelt
     MapNoteEnabled: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: NW_MAPNOTE001}
     TemplateResRef: {type: :resref, value: nw_mapnote001}
