Handelshaus: connect to Z, N
refs #386

--- a/mod/area/gabel_muenze.git.yml
+++ b/mod/area/gabel_muenze.git.yml
@@ -2880,7 +2880,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 35}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
     Description: 
@@ -2895,8 +2895,8 @@ Door List:
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_muenze}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: gabelnord_muenze}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_nord_2_gabel_muenze}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -2922,11 +2922,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 30}
+    OpenLockDC: {type: :byte, value: 35}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: muenze_gabelnord}
+    Tag: {type: :cexostr, value: gabel_muenze_2_gabel_nord}
     TemplateResRef: {type: :resref, value: x2_dooreasy2}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -2943,8 +2943,8 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
-    CloseLockDC: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 3.1416}
+    CloseLockDC: {type: :byte, value: 35}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
     Description: 
@@ -2960,7 +2960,7 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_muenze}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: gabelzentrum_muenze}
+    LinkedTo: {type: :cexostr, value: gabel_zentrum_2_gabel_muenze}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -2990,7 +2990,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: muenze_gabelzentrum}
+    Tag: {type: :cexostr, value: gabel_muenze_2_gabel_zentrum}
     TemplateResRef: {type: :resref, value: x2_dooreasy2}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -3007,7 +3007,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 0.0}
+    Bearing: {type: :float, value: -0.0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 20}
@@ -4091,7 +4091,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 180}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4416,7 +4416,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 108}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5120,7 +5120,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5183,7 +5183,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7863,7 +7863,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7926,7 +7926,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 157}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
