Gabel Lampen: add second story

--- a/mod/area/gabel_cassandra.git.yml
+++ b/mod/area/gabel_cassandra.git.yml
@@ -170,8 +170,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: WP_gabel_casst_2_gabel_cass1}
-    LinkedToFlags: {type: :byte, value: 2}
+    LinkedTo: {type: :cexostr, value: gabel_cass2_2_gabel_cass1}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -198,7 +198,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: gabel_cass1_2_gabel_casst}
+    Tag: {type: :cexostr, value: gabel_cass1_2_gabel_cass2}
     TemplateResRef: {type: :resref, value: ctp_door_05l}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -272,6 +272,132 @@ Door List:
     X: {type: :float, value: 25.0}
     Y: {type: :float, value: 48.65}
     Z: {type: :float, value: -0.78}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 1}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.7854}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 15}
+    Description: 
+      type: :cexolocstr
+      str_ref: 9077
+      value: {}
+
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    GenericType_New: {type: :dword, value: 179}
+    HP: {type: :short, value: 15}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: WP_gabel_casst_2_gabel_cass1}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 14445
+      value: 
+        0: Fancy Door 02b
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 558}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: gabel_cass2_2_gabel_casst}
+    TemplateResRef: {type: :resref, value: ctp_door_02b}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 86.6}
+    Y: {type: :float, value: 46.5}
+    Z: {type: :float, value: 0.3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 1}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 2.3562}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 15}
+    Description: 
+      type: :cexolocstr
+      str_ref: 9077
+      value: {}
+
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    GenericType_New: {type: :dword, value: 179}
+    HP: {type: :short, value: 15}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_cass1_2_gabel_cass2}
+    LinkedToFlags: {type: :byte, value: 1}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 14445
+      value: 
+        0: Fancy Door 02b
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 558}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: gabel_cass2_2_gabel_cass1}
+    TemplateResRef: {type: :resref, value: ctp_door_02b}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 63.4}
+    Y: {type: :float, value: 23.5}
+    Z: {type: :float, value: 0.3}
 Encounter List: 
   type: :list
   value: []
@@ -21302,7 +21428,7 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_gabel_cass1_2_gabel_casst}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: -0.7071}
-    XPosition: {type: :float, value: 56.0085}
+    XPosition: {type: :float, value: 85.7316}
     YOrientation: {type: :float, value: -0.7071}
-    YPosition: {type: :float, value: 86.2591}
-    ZPosition: {type: :float, value: 0.1513}
+    YPosition: {type: :float, value: 46.1649}
+    ZPosition: {type: :float, value: -0.0}
