--- a/mod/area/mondsee2.git.yml
+++ b/mod/area/mondsee2.git.yml
@@ -9,7 +9,6 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 0}
     AmbientSndNight: {type: :int, value: 53}
     AmbientSndNitVol: {type: :int, value: 0}
-    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 34}
     MusicDay: {type: :int, value: 1}
@@ -21,8 +20,69 @@ Creature List:
 
 Door List: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.0}
+    CloseLockDC: {type: :byte, value: 0}
+    Comment: {type: :cexostr, value: ""}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    GenericType_New: {type: :dword, value: 0}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: xyz}
+    KeyRequired: {type: :byte, value: 1}
+    LinkedTo: {type: :cexostr, value: ""}
+    LinkedToFlags: {type: :byte, value: 0}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: "Haust\xFCr (unbreakable)"
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 1}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
+    PortraitId: {type: :word, value: 558}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: Haustrunbreakable}
+    TemplateResRef: {type: :resref, value: door_unbreak}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 85.0}
+    Y: {type: :float, value: 13.81}
+    Z: {type: :float, value: -1.5}
 Encounter List: 
   type: :list
   value: 
@@ -35,13 +95,13 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 35}
-        CR: {type: :float, value: 0.333299994468689}
+        CR: {type: :float, value: 0.333333343267441}
         ResRef: {type: :resref, value: nw_deer}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 37}
-        CR: {type: :float, value: 0.333299994468689}
+        CR: {type: :float, value: 0.333333343267441}
         ResRef: {type: :resref, value: nw_deerstag}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 1}
